<resources>
    <string name="app_name">ParkTrack</string>
    <string name="splash_desc">Track your park with ease</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_new_account">Create new Account</string>
    <string name="create_an_account">Create an\naccount</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="parking_point_text">This is where your parking point\nwill be shown</string>
    <string name="photo_button">Take Picture</string>
    <string name="home">Home</string>
    <string name="park">Park</string>
    <string name="profile">Profile</string>
    <string name="parking_session_completed">Parking Finished!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="parktrack">PARKTRACK</string>
    <string name="track_park_text">Track where you park here</string>
    <string name="done_button">Done</string>
    <string name="done_parking">Done parking?</string>
    <string name="date">DD/MM/yyyy</string>
    <string name="parking_date">Parking Date</string>
    <string name="time">HH:mm</string>
    <string name="parking_time">Parking Time</string>
    <string name="parking_image">ParkingImage</string>
    <string name="location_text">Location: Latitude, Longitude</string>
    <string name="delete_button">Delete</string>
</resources>